2002-05-19  Damien Sandras  <dsandras@seconix.com>

	* configure.in: Fixed small bug in the flags.
	
2002-05-18  Christian Rose  <menthos@menthos.com>

	* src/config-tool-i18n.h: Fixed /n to \n.

2002-05-18  Kenneth Rohde Christiansen  <kenneth@gnu.org>

        * src/config-i18n.h: Added YES, and changed the message Damien 
	just changed.
        * src/gnomemeeting-config-tool.in: Made YES command translatable
	(fixes #82193).

2002-05-18  Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp: Fixed the about box to take all coders
	and contributors into account.

	* src/druid.cpp: Added page number.
 
	* src/gdkvideoio.cpp: Added possibility to see both correspondants
	at the same time.

	* src/gnomemeeting-config-tool.in: Fixed "shutted" in "shut" (eeeek!)

	* src/menu.cpp: Added possibility to see both correspondants at
	the same time.

	* src/pref_window.cpp: Added description for H.245 Tunneling and Fast
	Start.

	* Makefile.am: Added code to install the manpage.

	* configure.in: Added code to install the manpage.

	* man/Makefile.am: Added this file.

	* man/gnomemeeting.1: Added this file, manpage made by Kilian Krause.

2002-05-18  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* src/config-i18n.h:
	* src/gnomemeeting-config-tool.in: Fixed some i18n problems
	menthos had. (fixes #82191).

2002-05-17  Damien Sandras  <dsandras@seconix.com>
	
	* src/endpoint.cpp: Remote User Name and Remote Application Name
	are now converted from ISO-8859-1 to UTF8.
	
	* src/ils.cpp: Strings are encoded from UTF8 to ISO-8859-1 
	before registering and from ISO-8859-1 to UTF8
	
	* src/main_window.cpp: Local User Name is converted from UTF8
	to ISO-8859-1 before setting it.
	
	* src/pref_window.cpp: See here above.
	
	* src/videograbber.cpp: Fixed bug. Config is now read in "Open"
	so that we are sure to Open the grabber with the new parameters
	even if it is opened synchroneously.

2002-05-17  Kenneth Rohde Christiansen  <kenneth@gnu.org>
