@@ -1,22 +1,22 @@
 char *s = N_("YES");
 char *s = N_("Sorry, this script won't work while GnomeMeeting is running");
 char *s = N_("  WARNING!!!");
-char *s = N_("  This script will delete all user GnomeMeeting configuration\n  including preferences that may be important! \n  GConf daemon will be shutted down, so make sure you have no apps\n  depending on it running\n\n  Do you really want to do this?\n\n  If so, say \"YES\"\n\n");
+char *s = N_("  This script will delete all user GnomeMeeting configuration,\n  including preferences that may be important! \n  The GConf daemon will be shut down, so make sure you have no\n  applications depending on it running.\n\n  Do you really want to do this?\n\n  If so, say \"YES\".\n\n");
 char *s = N_("Removing $HOME/.gconf/apps/gnomemeeting");
 char *s = N_("Shutting down GConf daemon");
 char *s = N_("...Done.");
 char *s = N_("Leaving configuration alone.");
 char *s = N_("Have a nice day.");
-char *s = N_("  GConf daemon will be shut down, so make sure you have no apps\n  depending on it running\n\n  Do you really want to do this?\n\n  If so, say \"YES\"\n\n");
-char *s = N_("Shutting down gconf daemon");
+char *s = N_("  The GConf daemon will be shut down, so make sure you have no\n  applications depending on it running.\n\n  Do you really want to do this?\n\n  If so, say \"YES\".\n\n");
+char *s = N_("Shutting down GConf daemon");
 char *s = N_("Removing schemas");
 char *s = N_("Shutting down GConf daemon");
 char *s = N_("Installing schemas");
-char *s = N_("CRITICAL ERROR -- Schema installation is failed.\nMost probably you have gconf daemon running as root.\n\nRun \"gnomemeeting-config-tool --install-schemas\" as root\n");
+char *s = N_("CRITICAL ERROR -- Schema installation failed.\nMost probably you have the GConf daemon running as root.\n\nRun \"gnomemeeting-config-tool --install-schemas\" as root.\n");
 char *s = N_("Usage:  gnomemeeting-config-tool OPTION");
 char *s = N_("Fixes problems with the GnomeMeeting settings"););
 char *s = N_("  --clean                remove all user settings");
-char *s = N_("  --install-schemas      install schemas with settings defaults (run as root)");
-char *s = N_("  --clean-schemas        remove schemas with settings defaults (run as root)");
+char *s = N_("  --install-schemas      install schemas with default settings (run as root)");
+char *s = N_("  --clean-schemas        remove schemas with default settings (run as root)");
 char *s = N_("  --fix-permissions      fix permissions of GConf repository (run as root)");
 
