@@ -18,7 +18,7 @@ clean () {
 	echo
 	gettext "  WARNING!!!"; echo
 	echo    "  ---------------------------------------------------------------"
-	printf "`gettext "  This script will delete all user GnomeMeeting configuration\n  including preferences that may be important! \n  GConf daemon will be shut down, so make sure you have no apps\n  depending on it running\n\n  Do you really want to do this?\n\n  If so, say \"YES\"\n\n"`";
+	printf "`gettext ("  This script will delete all user GnomeMeeting configuration,\n  including preferences that may be important! \n  The GConf daemon will be shut down, so make sure you have no\n  applications depending on it running.\n\n  Do you really want to do this?\n\n  If so, say \"YES\".\n\n"`";
 
 	read WARNINGANSWER
 	
@@ -50,7 +50,7 @@ shutdownwarning () {
     echo
     gettext "  WARNING!!!"; echo
     echo    "  ---------------------------------------------------------------"
-    printf "`gettext "  GConf daemon will be shut down, so make sure you have no apps\n  depending on it running\n\n  Do you really want to do this?\n\n  If so, say \"YES\"\n\n"`";
+    printf "`gettext "  The GConf daemon will be shut down, so make sure you have no\n  applications depending on it running.\n\n  Do you really want to do this?\n\n  If so, say \"YES\".\n\n"`";
 }
 
 cleanschemas () {
@@ -64,7 +64,7 @@ cleanschemas () {
 
 	SOURCE=`gconftool-2 --get-default-source`
 	    
-	gettext "Shutting down gconf daemon"; echo
+	gettext "Shutting down GConf daemon"; echo
 	gconftool-2 --shutdown
 
 	gettext "Removing schemas"; echo
@@ -111,7 +111,7 @@ pkginstallschemas ()
 installfailure ()
 {
     echo
-    printf "`gettext "CRITICAL ERROR -- Schema installation is failed.\nMost probably you have gconf daemon running as root.\n\nRun \"gnomemeeting-config-tool --install-schemas\" as root/n"`";
+    printf "`gettext "CRITICAL ERROR -- Schema installation failed.\nMost probably you have the GConf daemon running as root.\n\nRun \"gnomemeeting-config-tool --install-schemas\" as root.\n"`";
 
     exit 1
 }
