@@ -1,3 +1,7 @@
+2002-05-19  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2002-05-18  Christophe Merlet  <christophe@merlet.net>
 
 	* fr.po: Updated french translation and converted to UTF-8.
