@@ -1,3 +1,9 @@
+2002-05-19  Christian Rose  <menthos@menthos.com>
+
+	* src/config-tool-i18n.h, src/endpoint.cpp,
+	src/gnomemeeting-config-tool.in, src/pref_window.cpp:
+	Fixed typos and other errors in messages.
+
 2002-05-19  Damien Sandras  <dsandras@seconix.com>
 
 	* configure.in: Fixed small bug in the flags.
